[gd_scene load_steps=34 format=2]

[ext_resource path="res://src/entities/player/guns/bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/7.png" type="Texture" id=2]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/13.png" type="Texture" id=3]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/3.png" type="Texture" id=4]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/2.png" type="Texture" id=5]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/17.png" type="Texture" id=6]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/15.png" type="Texture" id=7]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/5.png" type="Texture" id=8]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/6.png" type="Texture" id=9]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/1.png" type="Texture" id=10]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/8.png" type="Texture" id=11]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/10.png" type="Texture" id=12]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/9.png" type="Texture" id=13]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/11.png" type="Texture" id=14]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/12.png" type="Texture" id=15]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/14.png" type="Texture" id=16]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/16.png" type="Texture" id=17]
[ext_resource path="res://assets/hotlinemiamiclone/bullet_impact/4.png" type="Texture" id=18]
[ext_resource path="res://assets/FXPack_nyknck/Smoke/FX002/FX002_05.png" type="Texture" id=22]
[ext_resource path="res://assets/FXPack_nyknck/Smoke/FX002/FX002_06.png" type="Texture" id=23]
[ext_resource path="res://assets/FXPack_nyknck/Smoke/FX002/FX002_07.png" type="Texture" id=24]
[ext_resource path="res://assets/FXPack_nyknck/LightFX/FX003/FX003_01.png" type="Texture" id=25]
[ext_resource path="res://assets/FXPack_nyknck/LightFX/FX003/FX003_03.png" type="Texture" id=26]
[ext_resource path="res://assets/FXPack_nyknck/Smoke/FX002/FX002_03.png" type="Texture" id=27]
[ext_resource path="res://assets/FXPack_nyknck/LightFX/FX003/FX003_02.png" type="Texture" id=28]
[ext_resource path="res://assets/FXPack_nyknck/LightFX/FX003/FX003_04.png" type="Texture" id=29]
[ext_resource path="res://assets/FXPack_nyknck/Smoke/FX002/FX002_08.png" type="Texture" id=30]
[ext_resource path="res://assets/FXPack_nyknck/LightFX/FX003/FX003_05.png" type="Texture" id=31]
[ext_resource path="res://assets/FXPack_nyknck/Smoke/FX002/FX002_04.png" type="Texture" id=32]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 0.898039, 0.513726, 0.145098, 1, 0.831373, 0.380392, 0.168627 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TrajectoryLine:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("TrajectoryLine:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 31 ) ],
"loop": true,
"name": "impact0",
"speed": 30.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 32 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 30 ) ],
"loop": true,
"name": "impact1",
"speed": 20.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 3 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 17 ), ExtResource( 6 ) ],
"loop": true,
"name": "fragmentation",
"speed": 50.0
} ]

[node name="Bullet" type="RayCast2D"]
enabled = true
cast_to = Vector2( 0, 0 )
script = ExtResource( 1 )

[node name="TrajectoryLine" type="Line2D" parent="."]
width = 1.0
gradient = SubResource( 1 )

[node name="FadeAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fade_out = SubResource( 3 )

[node name="ImpactSpriteAnimation" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( 6, -2.13163e-14 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 4 )
animation = "impact0"

[connection signal="animation_finished" from="FadeAnimation" to="." method="_on_FadeAnimation_animation_finished"]
[connection signal="animation_finished" from="ImpactSpriteAnimation" to="." method="_on_ImpactSpriteAnimation_animation_finished"]
